--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "chartjs-plugin-zoom": "^2.0.1",
     "hammerjs": "^2.0.8",
     "next": "14.1.4",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18"
