--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+NEXT_PUBLIC_BACKEND_URL=http://projekt_zespolowy_backend.railway.internal:8000
 NEXT_PUBLIC_MAX_FILES=20
