--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "notistack": "^3.0.1",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
