--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,17 +21,21 @@
     "notistack": "^3.0.1",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
+    "react-bootstrap-icons": "^1.11.4",
+    "react-use": "^17.5.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
